--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-} */
 
 
 img {
@@ -28,10 +19,10 @@ h1 {
   color: #333333;
 }
 
-input[type="file"] {
+/* input[type="file"] {
   display: block;
   margin: 20px auto;
-}
+} */
 
 select {
   display: block;
